refactor: restructure project setup and clean up codebase
- Reorganized build files: replaced existing `build.gradle.kts` with `build.gradle` and updated `gradle` dependencies for better project structure and compatibility.
- Removed unused and outdated code: deprecated settings in `PlayerInteractAtNPCListener` and redundant `hasLiked` method.
- Introduced utility method `removeKnockbackGlow` for cleaner `LobbyPlayer` inventory updates.
- Simplified conditional logic in event listeners for improved readability and maintainability.
- Added a list for NPC definitions and refactored NPC initialization to streamline creation.
- Seasonal events (e.g., Halloween and WM 2026) now integrated with event-specific messages and conditional scheduling.

Author: Noah Leibetseder